--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -5,16 +5,43 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="public/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title> watch+ </title>
+    <title> Watch+ </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="navbar">
-        <img src="public/imagens/watch + logo branco.png" alt="watch+" class="logo">
-        <a href="/" class="link">home</a>
-        <a href="filmes-e-series" class="link">filmes e séries</a>
-        <a href="pacotes" class="link">pacotes</a>
-        <a href="cadastre-se" class="link">cadastre-se</a>
+    <nav class="navbar navbar-expand-lg color-white">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="public/imagens/watch + logo branco.png" alt="Watch+ Logo" class="logo">
+                Watch+
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav me-0 mb-2 mb-lg-0 ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item ms-lg-5">
+                        <a class="nav-link" href="/pacotes">Pacotes</a>
+                    </li>
+                    <li class="nav-item ms-lg-5">
+                        <a class="nav-link" href="/filmes-e-series">Filmes e Séries</a>
+                    </li>
+                    <li class="nav-item ms-lg-5">
+                        <a class="nav-link" href="/cadastre-se">Cadastre-se</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <div class="conjunto">
