--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="public/css/animations.css">
     <link rel="stylesheet" href="public/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Watch+ </title>
@@ -44,28 +45,40 @@
         </div>
     </nav>
 
-    <div class="conjunto">
-        <img src="public/imagens/004017aedc6dcd672c1456d502f013bd.jpg" alt="Poster E.t." class="poster">
-        <h1 class="titulo">Sua aventura começa aqui!</h1>
-        <div>
-            <p class="texto">Aproveite milhares de filmes, séries, documentários e muito mais em um único lugar, sem
-                sair de casa!</p>
+    <div class="container mt-5 pb-5">
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start">
+            <img src="public/imagens/004017aedc6dcd672c1456d502f013bd.jpg"
+                alt="Poster do filme Homem Aranha no Aranhaverso" class="poster transition-left">
+            <div class="md-ms-5 mt-3 transition-right">
+                <h1 class="titulo text-center ">Sua aventura começa aqui!</h1>
+                <p class="texto mt-3 text-center ">Aproveite milhares de filmes, séries, documentários e
+                    muito mais em um
+                    único
+                    lugar, sem
+                    sair de casa!</p>
+            </div>
         </div>
-    </div>
+        <div
+            class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
 
-    <div class="conjunto">
-        <h1 class="titulo2">No celular,TV e muito mais!</h1>
-        <div>
-            <p class="texto2">Nosso contéudo pode ser assistido de qualquer lugar!</p>
+            <div class="md-ms-5 mt-3 transition-left">
+                <h1 class="titulo text-center ">No celular, TV e muito mais!</h1>
+                <p class="texto mt-3 text-center">Nosso contéudo pode ser assistido de qualquer lugar, sem restrição de
+                    endereço! Porque aqui, o foco é o cliente.</p>
+            </div>
+            <img src="public/imagens/04996d042574c99f2b40af7878e4d4e4.jpg" alt="Poster do filme O show de Truman"
+                class="poster transition-right">
+
         </div>
-        <img src="public/imagens/04996d042574c99f2b40af7878e4d4e4.jpg" alt="Poster E.t." class="poster2">
-    </div>
-
-    <div class="conjunto">
-        <img src="public/imagens/ad7fa71dce1e7205361e33b742599f88.jpg" alt="Poster E.t." class="poster">
-        <h1 class="titulo">Sem internet? sem problemas!</h1>
-        <div>
-            <p class="texto">Salve seus favoritos para sempre ter offline</p>
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
+            <img src="public/imagens/ad7fa71dce1e7205361e33b742599f88.jpg" alt="Poster do filme Bonequinha de Luxo"
+                class="poster transition-left">
+            <div class="md-ms-5 mt-3 transition-right">
+                <h1 class="titulo text-center">Sem internet? sem problemas!</h1>
+                <p class="texto mt-3 text-center">Salve seus seus conteúdos favoritos e tenha acesso a eles de qualquer
+                    lugar, com ou sem conexão! O download de filmes e séries está disponível em todos os pacotes, para
+                    voce curtir a Watch+ até offline!</p>
+            </div>
         </div>
     </div>
 
