--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,9 @@
 body{
     margin: 0;
     background: linear-gradient(#615AB2, #43C8C8);
-    height: 1800px;
-    width: auto;
-}
-
-.filser{
-    height: 750px;
+    /* Truque para a animação não causar overflow na página */
+    overflow-x: hidden;
+    min-height: 100vh;
 }
 
 html {
@@ -34,54 +31,24 @@ html {
 a{
     color: white;
 }
-
-.conjunto{
-    padding-top: 50px;
-    display: flex;
+.poster {
+    max-width: 300px;
 }
-
-.poster{
-    padding-left: 225px;
-    width: 400px;
-}
-
 .titulo{
     font-family: Berlin Sans FB;
     color: white;
-    padding-top: 25px;
-    padding-left: 25px;
-    font-size: 45px;
 }
-
+.transition-left {
+    animation: to-right .5s;
+}
+.transition-right {
+    animation: to-left .5s;
+}
 .texto{
     font-family: Berlin Sans FB;
     color: white;
-    padding-top: 175px;
-    font-size: 30px;
-    width: 250px;
-    padding-right: 300px;
-}
-
-.poster2{
-    padding-right: 225px;
-    width: 400px;
-}
-
-.titulo2{
-    font-family: Berlin Sans FB;
-    color: white;
-    padding-top: 25px;
-    padding-left: 150px;
-    font-size: 45px;
-}
-
-.texto2{
-    font-family: Berlin Sans FB;
-    color: white;
-    padding-top: 175px;
-    font-size: 30px;
-    width: 250px;
-    padding-left: 300px;
+    font-size: 25px;
+    
 }
 
 .agrupar{
@@ -101,13 +68,6 @@ a{
     display: flex;
     transform: translateX(0);
     transition: transform 0.3s ease-in-out;
-}
-
-img {
-    /* visibility: hidden; */
-    object-fit: cover;
-    height: 500px;
-    width: 500px;
 }
 
 button{
