implementado o seletor de planos, corrigido bugs visuais na tela home

--- a/controllers/Cadastro/view/cadastre-se.html
+++ b/controllers/Cadastro/view/cadastre-se.html
@@ -2,8 +2,12 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/responsividade.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Watch+ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,12 +15,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg color-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img src="public/imagens/watch + logo branco.png" alt="Watch+ Logo" class="logo">
                 Watch+
             </a>
@@ -37,14 +44,59 @@
                         <a class="nav-link" href="/filmes-e-series">Filmes e Séries</a>
                     </li>
                     <li class="nav-item ms-lg-5">
-                        <a class="nav-link" href="/cadastre-se">Cadastre-se</a>
+                        <a class="nav-link" href="#">Cadastre-se</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <section class="container d-flex flex-column flex-md-row mt-3">
+        <form action="" class="d-flex flex-column flex-md-row form-cadastro">
+            <div class="planos pe-1">
+                <h2 class="text-center text-md-start titulo">Nossos planos:</h2>
+                <div class="form-check d-flex position-relative">
+                    <input class="form-check-input ms-0 align-self-center" value="Basic" type="radio" name="plano"
+                        id="radio-plano-basic">
+                    <label class="form-check-label card-plano ps-3" for="radio-plano-basic">
+                        <span class="nome-plano">Watch Basic</span>
+                        <ul class="lista mb-0">
+                            <li>1x tela</li>
+                            <li>Catálogo HD</li>
+                        </ul>
+                        <span class="preco position-absolute">R$ 9,90</span>
+                    </label>
+                </div>
 
+                <div class="form-check d-flex position-relative mt-3">
+                    <input class="form-check-input ms-0 align-self-center" value="Basic" type="radio" name="plano"
+                        id="radio-plano-basic">
+                    <label class="form-check-label card-plano ps-3" for="radio-plano-basic">
+                        <span class="nome-plano">Watch Top</span>
+                        <ul class="lista mb-0">
+                            <li>3x telas simultâneas</li>
+                            <li>Catálogo 4k</li>
+                        </ul>
+                        <span class="preco position-absolute">R$ 19,90</span>
+                    </label>
+                </div>
+
+                <div class="form-check d-flex position-relative mt-3">
+                    <input class="form-check-input ms-0 align-self-center" value="Basic" type="radio" name="plano"
+                        id="radio-plano-basic">
+                    <label class="form-check-label card-plano ps-3" for="radio-plano-basic">
+                        <span class="nome-plano">Watch Family</span>
+                        <ul class="lista mb-0">
+                            <li>6x telas simultâneas</li>
+                            <li>Catálogo 8k</li>
+                        </ul>
+                        <span class="preco position-absolute">R$ 29,90</span>
+                    </label>
+                </div>
+            </div>
+            <div class="dados ps-1"></div>
+        </form>
+    </section>
 </body>
 
 </html>
