--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="public/css/animations.css">
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/responsividade.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Watch+ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,6 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -45,11 +50,11 @@
         </div>
     </nav>
 
-    <div class="container mt-5 pb-5">
+    <section class="container mt-5 pb-5">
         <div class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start">
             <img src="public/imagens/004017aedc6dcd672c1456d502f013bd.jpg"
                 alt="Poster do filme Homem Aranha no Aranhaverso" class="poster transition-left">
-            <div class="md-ms-5 mt-3 transition-right">
+            <div class="ms-md-5 mt-3 transition-right">
                 <h1 class="titulo text-center ">Sua aventura começa aqui!</h1>
                 <p class="texto mt-3 text-center ">Aproveite milhares de filmes, séries, documentários e
                     muito mais em um
@@ -61,26 +66,26 @@
         <div
             class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
 
-            <div class="md-ms-5 mt-3 transition-left">
+            <div class="mt-3 transition-left">
                 <h1 class="titulo text-center ">No celular, TV e muito mais!</h1>
                 <p class="texto mt-3 text-center">Nosso contéudo pode ser assistido de qualquer lugar, sem restrição de
                     endereço! Porque aqui, o foco é o cliente.</p>
             </div>
             <img src="public/imagens/04996d042574c99f2b40af7878e4d4e4.jpg" alt="Poster do filme O show de Truman"
-                class="poster transition-right">
+                class="poster ms-md-5 transition-right">
 
         </div>
         <div class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
             <img src="public/imagens/ad7fa71dce1e7205361e33b742599f88.jpg" alt="Poster do filme Bonequinha de Luxo"
                 class="poster transition-left">
-            <div class="md-ms-5 mt-3 transition-right">
+            <div class="ms-md-5 mt-3 transition-right">
                 <h1 class="titulo text-center">Sem internet? sem problemas!</h1>
                 <p class="texto mt-3 text-center">Salve seus seus conteúdos favoritos e tenha acesso a eles de qualquer
                     lugar, com ou sem conexão! O download de filmes e séries está disponível em todos os pacotes, para
                     voce curtir a Watch+ até offline!</p>
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 
