--- a/controllers/Filmes/view/filmes-e-series.html
+++ b/controllers/Filmes/view/filmes-e-series.html
@@ -2,8 +2,12 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/responsividade.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100&family=Bebas+Neue&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Watch+ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,6 +15,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="filser">
@@ -44,21 +51,25 @@
         </div>
     </nav>
 
-    <div class="agrupar">
-        <div class="carousel">
-            <div class="image-container">
-                <img src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1564865878688-9a244444042a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                    alt="">
+    <section class="mt-3 wrapper-originais d-flex justify-content-center align-items-center flex-column">
+        <h1 class="titulo text-center">Séries Originais</h1>
+        <div class="carousel-wrapper d-flex mt-3 align-items-center">
+            <button id="back" class="btn-passar-foto btn me-5"> &lt; </button>
+
+            <div class="carousel">
+                <div class="image-container">
+                    <img src="public/imagens/serie-pula-boi-pula-cavalo.png"
+                        alt="Série original: Pula boi pula cavalo, pula cavalo e boi" class="filser-img">
+                    <img src="public/imagens/doggo-the-dog.png" alt="Série original: Doggo, the dog" class="filser-img">
+                    <img src="public/imagens/rio.png" alt="Série Original: Rio, uma história de samba"
+                        class="filser-img">
+                </div>
             </div>
+            <button id="next" class="btn-passar-foto btn ms-5"> &gt; </button>
         </div>
-        <button id="back">Previous</button>
-        <button id="next">Next</button>
+
         <script src="public/script.js"></script>
-    </div>
+    </section>
 
 </body>
 
