--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,9 @@ body{
     overflow-x: hidden;
     min-height: 100vh;
 }
-
+.custom-bg-gradient {
+    background: linear-gradient(#7161CD, #00E0FF);
+}
 .color-white {
     color: white;
 }
@@ -28,10 +30,24 @@ html {
 }
 .navbar-brand{
     font-size: 28px !important;
+    transition: all .2s ease-in-out;
 }
 .nav-link{
    font-size: 22px !important; 
+   transition: all .2s ease-in-out;
 }
+
+.navbar-brand:hover {
+    transform: scale(1.2);
+}
+
+.nav-link:hover{
+   background: -webkit-linear-gradient(#615AB2, #43C8C8);
+   background-clip: text;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+}
+
 .logo{
     max-width: 100px;
     max-height: 75px;
@@ -42,6 +58,9 @@ a{
 }
 .poster {
     max-width: 300px;
+}
+.imagem-planos{
+    border-radius: 10px;
 }
 .titulo{
 
@@ -60,17 +79,18 @@ a{
     
 }
 
-.agrupar{
-    padding-top: 50px;
-    padding-left: 450px;
+.filser-img {
+    /* visibility: hidden; */
+    object-fit: cover;
+    width: 350px;
+    height: 350px;
 }
-
 
 .carousel {
     box-shadow: 2px 2px 25px rgb(0,0,0,0.5);
     overflow: hidden;
-    height: 500px;
-    width: 500px;
+    height: 350px;
+    width: 350px;
 }
 
 .image-container{
@@ -79,36 +99,40 @@ a{
     transition: transform 0.3s ease-in-out;
 }
 
-button{
-    padding-left: 150px;
-    background-color: #5e43c8;
-    font-style: oblique;
-    border-color: #5e43c8;
-    color:white;
+.btn-passar-foto{
+    border-radius: 100% !important;
+    background-color: #484686 !important;
+    color: white !important;
+    height: 50px;
+    width: 50px;
+    font-size: 50px !important;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px !important;
+}
+.card-plano-descritivo{
+    border-radius: 25px;
 }
 
-.basic{
-    padding-left: 150px;
-    width: 500px;
-    height: 500px;
-    background: linear-gradient(#7161CD, #00E0FF);
-    border-radius: 15%;
+.card-plano-descritivo > .preco-left,
+.card-plano-descritivo > .preco {
+    bottom: 3rem;
+    right: 3rem;
+    color: white;
+    font-size: 32px;
+    
+}
+.card-plano-descritivo > .preco-left{
+    left: 3rem;
+    right: 0;
 }
 
-.top{
-    padding-left: 150px;
-    width: 500px;
-    height: 500px;
-    background: linear-gradient(#7161CD, #00E0FF);
-    border-radius: 15%;
+.card-plano-descritivo{
+    transition: all .2s ease-in-out;
 }
-
-.family{
-    padding-left: 150px;
-    width: 500px;
-    height: 500px;
-    background: linear-gradient(#7161CD, #00E0FF);
-    border-radius: 15%;
+.card-plano-descritivo:hover {
+    transform: scale(1.1);
 }
 
 /* Form de cadastro */
