Adicionadas tags semanticas

--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -52,7 +52,7 @@
     </nav>
 
     <section class="container mt-5 pb-5">
-        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start">
+        <article class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start">
             <img src="public/imagens/004017aedc6dcd672c1456d502f013bd.jpg"
                 alt="Poster do filme Homem Aranha no Aranhaverso" class="poster transition-left">
             <div class="ms-md-5 mt-3 transition-right">
@@ -63,8 +63,8 @@
                     lugar, sem
                     sair de casa!</p>
             </div>
-        </div>
-        <div
+        </article>
+        <article
             class="d-flex flex-column-reverse flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
 
             <div class="mt-3 transition-left">
@@ -75,8 +75,9 @@
             <img src="public/imagens/04996d042574c99f2b40af7878e4d4e4.jpg" alt="Poster do filme O show de Truman"
                 class="poster ms-md-5 transition-right">
 
-        </div>
-        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
+        </article>
+        <article
+            class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
             <img src="public/imagens/ad7fa71dce1e7205361e33b742599f88.jpg" alt="Poster do filme Bonequinha de Luxo"
                 class="poster transition-left">
             <div class="ms-md-5 mt-3 transition-right">
@@ -85,7 +86,7 @@
                     lugar, com ou sem conexão! O download de filmes e séries está disponível em todos os pacotes, para
                     voce curtir a Watch+ até offline!</p>
             </div>
-        </div>
+        </article>
     </section>
 
 </body>
