--- a/controllers/Pacotes/view/pacotes.html
+++ b/controllers/Pacotes/view/pacotes.html
@@ -52,7 +52,7 @@
         </div>
     </nav>
     <section class="container mt-5 pb-5">
-        <div
+        <article
             class="d-flex flex-column flex-md-row align-items-center position-relative justify-content-center align-items-md-start custom-bg-gradient p-5 card-plano-descritivo">
             <img src="public/imagens/watch-basic.jpeg" alt="Homem mexendo no celular com um café na mão"
                 class="poster imagem-planos">
@@ -63,8 +63,8 @@
                     pessoa! Curta no trem, no caminho da facul, ou a noite com o mozão por um preço acessível! </p>
             </div>
             <span class="preco position-absolute">R$ 9,90</span>
-        </div>
-        <div
+        </article>
+        <article
             class="mt-5 d-flex flex-column flex-md-row align-items-center position-relative justify-content-center align-items-md-start custom-bg-gradient p-5 card-plano-descritivo">
 
             <div class="mt-3">
@@ -76,8 +76,8 @@
             <img src="public/imagens/watch-top.jpeg" alt="Conjunto de amigos bebendo em um sofá"
                 class="poster imagem-planos ms-md-5">
             <span class="preco-left position-absolute">R$ 19,90</span>
-        </div>
-        <div
+        </article>
+        <article
             class="mt-5 d-flex flex-column flex-md-row align-items-center position-relative justify-content-center align-items-md-start custom-bg-gradient p-5 card-plano-descritivo">
             <img src="public/imagens/watch-family.jpeg" alt="Poster imagem-planos do filme Bonequinha de Luxo"
                 class="poster imagem-planos">
@@ -89,7 +89,7 @@
                     match perfeito para o fim de tarde!</p>
             </div>
             <span class="preco position-absolute">R$ 29,90</span>
-        </div>
+        </article>
     </section>
 
 </body>
