--- a/controllers/Filmes/view/filmes-e-series.html
+++ b/controllers/Filmes/view/filmes-e-series.html
@@ -56,7 +56,7 @@
         <div class="carousel-wrapper d-flex mt-3 align-items-center">
             <button id="back" class="btn-passar-foto btn me-5"> &lt; </button>
 
-            <div class="carousel">
+            <article class="carousel">
                 <div class="image-container">
                     <img src="public/imagens/serie-pula-boi-pula-cavalo.png"
                         alt="Série original: Pula boi pula cavalo, pula cavalo e boi" class="filser-img">
@@ -64,7 +64,7 @@
                     <img src="public/imagens/rio.png" alt="Série Original: Rio, uma história de samba"
                         class="filser-img">
                 </div>
-            </div>
+            </article>
             <button id="next" class="btn-passar-foto btn ms-5"> &gt; </button>
         </div>
 
