alterados os nomes das imagens

--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -53,8 +53,8 @@
 
     <section class="container mt-5 pb-5">
         <article class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start">
-            <img src="public/imagens/004017aedc6dcd672c1456d502f013bd.jpg"
-                alt="Poster do filme Homem Aranha no Aranhaverso" class="poster transition-left">
+            <img src="public/imagens/homem-aranha-no-aranhaverso.jpg" alt="Poster do filme Homem Aranha no Aranhaverso"
+                class="poster transition-left">
             <div class="ms-md-5 mt-3 transition-right">
                 <h1 class="titulo text-center ">Sua aventura começa aqui!</h1>
                 <p class="texto mt-3 text-center ">Aproveite milhares de filmes, séries, documentários e
@@ -72,13 +72,13 @@
                 <p class="texto mt-3 text-center">Nosso contéudo pode ser assistido de qualquer lugar, sem restrição de
                     endereço! Porque aqui, o foco é o cliente.</p>
             </div>
-            <img src="public/imagens/04996d042574c99f2b40af7878e4d4e4.jpg" alt="Poster do filme O show de Truman"
+            <img src="public/imagens/o-show-de-truman.jpg" alt="Poster do filme O show de Truman"
                 class="poster ms-md-5 transition-right">
 
         </article>
         <article
             class="d-flex flex-column flex-md-row align-items-center justify-content-center align-items-md-start mt-5">
-            <img src="public/imagens/ad7fa71dce1e7205361e33b742599f88.jpg" alt="Poster do filme Bonequinha de Luxo"
+            <img src="public/imagens/bonequinha-de-luxo.jpg" alt="Poster do filme Bonequinha de Luxo"
                 class="poster transition-left">
             <div class="ms-md-5 mt-3 transition-right">
                 <h1 class="titulo text-center">Sem internet? sem problemas!</h1>
