--- a/controllers/Cadastro/view/cadastre-se.html
+++ b/controllers/Cadastro/view/cadastre-se.html
@@ -54,7 +54,7 @@
     </nav>
 
     <section class="container d-flex flex-column flex-md-row mt-3 pb-5">
-        <form action="" class="d-flex flex-column flex-md-row form-cadastro">
+        <form class="d-flex flex-column flex-md-row form-cadastro" id="form-cadastro">
             <div class="planos">
                 <h2 class="text-center text-md-start titulo">Nossos planos:</h2>
                 <div class="form-check d-flex position-relative">
@@ -130,6 +130,7 @@
             </div>
         </form>
     </section>
+    <script src="public/submit.js"></script>
 </body>
 
 </html>
