adicionados validadores de cpf e bloqueadores de caracteres noinput telefone na tela de cadastro

--- a/controllers/Cadastro/view/cadastre-se.html
+++ b/controllers/Cadastro/view/cadastre-se.html
@@ -115,7 +115,7 @@
                     <div class="form-floating mt-3">
                         <input type="text" class="form-control" id="input-telefone" placeholder="Telefone"
                             name="telefone">
-                        <label for="input-telefone">Telefone</label>
+                        <label for="input-telefone">DDD + Telefone</label>
                     </div>
                     <div class="form-floating mt-3">
                         <input type="text" class="form-control" id="input-cpf" placeholder="CPF" name="cpf">
@@ -131,6 +131,8 @@
         </form>
     </section>
     <script src="public/submit.js"></script>
+    <script src="public/validaCpf.js"></script>
+    <script src="public/formataTelefone.js"></script>
 </body>
 
 </html>
