--- a/controllers/Filmes/view/filmes-e-series.html
+++ b/controllers/Filmes/view/filmes-e-series.html
@@ -51,26 +51,44 @@
         </div>
     </nav>
 
-    <section class="mt-3 wrapper-originais d-flex justify-content-center align-items-center flex-column">
-        <h1 class="titulo text-center">Séries Originais</h1>
-        <div class="carousel-wrapper d-flex mt-3 align-items-center">
-            <button id="back" class="btn-passar-foto btn me-5"> &lt; </button>
-
-            <article class="carousel">
-                <div class="image-container">
-                    <img src="public/imagens/serie-pula-boi-pula-cavalo.png"
-                        alt="Série original: Pula boi pula cavalo, pula cavalo e boi" class="filser-img">
-                    <img src="public/imagens/doggo-the-dog.png" alt="Série original: Doggo, the dog" class="filser-img">
-                    <img src="public/imagens/rio.png" alt="Série Original: Rio, uma história de samba"
-                        class="filser-img">
+    <section class="container mt-3">
+        <article class="wrapper-originais d-flex justify-content-center align-items-center flex-md-row flex-column ">
+            <div>
+                <h1 class="titulo text-center">Séries Originais</h1>
+                <div class="carousel-wrapper d-flex mt-3 align-items-center position-relative">
+                    <button id="back" class="btn-passar-foto btn-passar-foto-direita btn position-absolute"> &lt;
+                    </button>
+                    <div class="carousel">
+                        <div class="image-container">
+                            <img src="public/imagens/serie-pula-boi-pula-cavalo.png"
+                                alt="Série original: Pula boi pula cavalo, pula cavalo e boi" class="filser-img">
+                            <img src="public/imagens/doggo-the-dog.png" alt="Série original: Doggo, the dog"
+                                class="filser-img">
+                            <img src="public/imagens/rio.png" alt="Série Original: Rio, uma história de samba"
+                                class="filser-img">
+                        </div>
+                    </div>
+                    <button id="next" class="btn-passar-foto btn-passar-foto-esquerda btn position-absolute"> &gt;
+                    </button>
                 </div>
-            </article>
-            <button id="next" class="btn-passar-foto btn ms-5"> &gt; </button>
-        </div>
+            </div>
+            <h3 class="px-5 color-white mt-3 mt-md-0 text-center text-md-start">
+                Cansado de histórias que acabam rápido? Quer saber mais sobre os personagens que ama? Conheça já as
+                séries disponíveis na plataforma e tenha a hora que quiser episódios incríveis!
+            </h3>
+        </article>
 
         <script src="public/script.js"></script>
     </section>
-
+    <section class="container mt-3">
+        <article class="">
+            <h2 class="color-white text-center">
+                Pensando em você, selecionamos os melhores filmes do momento e disponibilizamos em nossa
+                plataforma. Assine já e venha conhecer os universos incríveis que te esperam. Lute com monstros, dome
+                dragões, salve um reino, viva um romance, tudo isso e muito mais sem sair de casa!
+            </h2>
+        </article>
+    </section>
 </body>
 
 </html>
