--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,20 @@ a{
     justify-content: center;
     align-items: center;
     padding-top: 10px !important;
+    transform: translateY(-50%);
+    z-index: 2;
+    top: 50%;
+    opacity: 0.65;
+    transition: all ease-in .2s;
+}
+.btn-passar-foto:hover {
+    opacity: 1;
+}
+.btn-passar-foto-direita{
+    left: 25px;
+}
+.btn-passar-foto-esquerda{
+    right: 25px;
 }
 .card-plano-descritivo{
     border-radius: 25px;
