corrigido o método de verificação do script da google

--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -18,6 +18,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+        content="Sua aventura começa aqui! Aproveite milhares de filmes, séries, documentários e muito mais em um único lugar, sem sair de casa!" />
+    <meta name="keywords" content="Streaming, Filmes, Séries, Documentários, TV, Cinema, Reality, Televisão" />
 </head>
 
 <body>
