removido arquivo de verificação da google, adicionado sitemap

--- a/controllers/Home/view/index.html
+++ b/controllers/Home/view/index.html
@@ -22,6 +22,7 @@
     <meta name="description"
         content="Sua aventura começa aqui! Aproveite milhares de filmes, séries, documentários e muito mais em um único lugar, sem sair de casa!" />
     <meta name="keywords" content="Streaming, Filmes, Séries, Documentários, TV, Cinema, Reality, Televisão" />
+    <meta name="robots" content="index, follow">
 </head>
 
 <body>
