adicionado robots.txt, adicionado link da aplicação ao readme, adicionado descrição e keywords a todas views

--- a/controllers/Cadastro/view/cadastre-se.html
+++ b/controllers/Cadastro/view/cadastre-se.html
@@ -20,6 +20,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+        content="Escolha o plano que melhor se adequa a suas necessidades e faça já seu cadastro" />
+    <meta name="keywords" content="Cadastro, Plano, HD, 4k, Telas simultâneas, Telas" />
+    <meta name="robots" content="index, follow">
 </head>
 
 <body>
