--- a/controllers/Filmes/view/filmes-e-series.html
+++ b/controllers/Filmes/view/filmes-e-series.html
@@ -18,6 +18,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Pensando em você, selecionamos os melhores filmes do momento e disponibilizamos em nossa plataforma. Assine já e venha conhecer os universos incríveis que te esperam. Lute com monstros, dome dragões, salve um reino, viva um romance, tudo isso e muito mais sem sair de casa!" />
+    <meta name="keywords" content="Filmes, Séries, Originals, Animação, Ação, Romance" />
+    <meta name="robots" content="index, follow">
 </head>
 
 <body class="filser">
