--- a/controllers/Pacotes/view/pacotes.html
+++ b/controllers/Pacotes/view/pacotes.html
@@ -19,6 +19,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Veja quais são os benefícios de cada pacote da Watch+ e escolha o que cabe no seu bolso" />
+    <meta name="keywords" content="Benefícios, Família, Planos, Pacotes, Filmes, Conteúdo" />
+    <meta name="robots" content="index, follow">
 </head>
 
 <body>
